--- a/examples/quickstart.ipynb
+++ b/examples/quickstart.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-12-17T01:56:31.017492Z",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-12-17T01:56:31.199599Z",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-12-17T01:56:31.461987Z",
@@ -96,9 +96,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Player RandomPlayer 1 won 1 out of 1 played\n",
-      "Player RandomPlayer 2 won 0 out of 1 played\n",
-      "battle-gen9randombattle-170418 True\n"
+      "Player RandomPlayer 3 won 1 out of 1 played\n",
+      "Player RandomPlayer 4 won 0 out of 1 played\n",
+      "battle-gen9randombattle-23 True\n"
      ]
     }
    ],
@@ -145,13 +145,13 @@
      "data": {
       "text/plain": [
        "{'RandomPlayer 1': {'RandomPlayer 1': None,\n",
-       "  'RandomPlayer 2': 0.8333333333333334,\n",
-       "  'RandomPlayer 3': 0.4},\n",
-       " 'RandomPlayer 2': {'RandomPlayer 1': 0.16666666666666666,\n",
+       "  'RandomPlayer 2': 0.5,\n",
+       "  'RandomPlayer 3': 0.8},\n",
+       " 'RandomPlayer 2': {'RandomPlayer 1': 0.5,\n",
        "  'RandomPlayer 2': None,\n",
-       "  'RandomPlayer 3': 0.4},\n",
-       " 'RandomPlayer 3': {'RandomPlayer 1': 0.6,\n",
-       "  'RandomPlayer 2': 0.6,\n",
+       "  'RandomPlayer 3': 0.2},\n",
+       " 'RandomPlayer 3': {'RandomPlayer 1': 0.2,\n",
+       "  'RandomPlayer 2': 0.8,\n",
        "  'RandomPlayer 3': None}}"
       ]
      },
@@ -194,12 +194,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--------------  -------------------  ------------------  --------------\n",
-      "-               RandomPlayer 1       RandomPlayer 2      RandomPlayer 3\n",
-      "RandomPlayer 1                       0.8333333333333334  0.4\n",
-      "RandomPlayer 2  0.16666666666666666                      0.4\n",
-      "RandomPlayer 3  0.6                  0.6\n",
-      "--------------  -------------------  ------------------  --------------\n"
+      "--------------  --------------  --------------  --------------\n",
+      "-               RandomPlayer 1  RandomPlayer 2  RandomPlayer 3\n",
+      "RandomPlayer 1                  0.5             0.8\n",
+      "RandomPlayer 2  0.5                             0.2\n",
+      "RandomPlayer 3  0.2             0.8\n",
+      "--------------  --------------  --------------  --------------\n"
      ]
     }
    ],
@@ -788,7 +788,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ws_7-R81_JQuk",
    "language": "python",
    "name": "python3"
   },
@@ -802,7 +802,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
